# gymnasium-jsbsim

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  FLIGHTGEAR_SETUP.md  MANIFEST.in  NOTICE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml  sync-wiki.yml
docs/: .gitignore  Makefile  README.md  WIKI_SYNC.md
docs/markdown/: index.md  modules.md
docs/source/: conf.py  index.rst  modules.rst
docs/source/_static/: .gitkeep
gymnasium_jsbsim/: __init__.py  aircraft.py  assessors.py  basic_ic.xml  constants.py  environment.py  flightgear.xml  properties.py  rewards.py  simulation.py  tasks.py  utils.py  visualiser.py
gymnasium_jsbsim/agents/: __init__.py  agents.py
gymnasium_jsbsim/examples/: README.md  check_flightgear_setup.py  random_agent.py  random_agent_flightgear.py  train_agent.py  view_agent.py
gymnasium_jsbsim/tests/: __init__.py  manual_tests.py  stubs.py  test_agents.py  test_assessors.py  test_environment.py  test_functional.py  test_geodetic_position.py  test_rewards.py  test_simulation.py  test_tasks.py  test_visualiser.py
scripts/: sync-wiki.sh
