[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gymnasium-jsbsim"
version = "0.1.0"
description = "✈️ A reinforcement learning environment for aircraft control using the JSBSim flight dynamics model"
readme = "README.md"
license = "MIT"
authors = [
    {name = "JGalego"},
    {name = "Gor-Ren"},
]
maintainers = [
    {name = "JGalego"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.2.6",
    "gymnasium>=1.2.2",
    "matplotlib>=3.10.7",
    "jsbsim>=1.2.3",
]

[project.urls]
Homepage = "https://github.com/JGalego/gymnasium-jsbsim"
Repository = "https://github.com/JGalego/gymnasium-jsbsim"
"Original Project" = "https://github.com/Gor-Ren/gym-jsbsim"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["gymnasium_jsbsim*"]
exclude = ["tests*"]
